--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       }
     </style>
     
-    <script type="module" crossorigin src="/assets/index.db9fe2dd.js"></script>
+    <script type="module" crossorigin src="assets/index.db9fe2dd.js"></script>
   </head>
   <body>
     <div id="game"></div>
