--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>魚龍誤食三色石的奇怪小遊戲</title>
+    <title>救救三色魚龍</title>
     <meta charset="utf-8" />
     <style>
       body {
